--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,11 @@
       <artifactId>spring-orm</artifactId>
       <version>6.1.3</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>3.2.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>SpringMVCTest</finalName>
